@@ -1,13 +1,27 @@
-@REM
-@REM Copyright (c) 2001-2022 Mathew A. Nelson and Robocode contributors
-@REM All rights reserved. This program and the accompanying materials
-@REM are made available under the terms of the Eclipse Public License v1.0
-@REM which accompanies this distribution, and is available at
-@REM https://robocode.sourceforge.io/license/epl-v10.html
-@REM
+@rem
+@rem Copyright (c) 2001-2023 Mathew A. Nelson and Robocode contributors
+@rem All rights reserved. This program and the accompanying materials
+@rem are made available under the terms of the Eclipse Public License v1.0
+@rem which accompanies this distribution, and is available at
+@rem https://robocode.sourceforge.io/license/epl-v10.html
+@rem
 
-@REM Older than Java 12
-@REM java -Xmx512M -cp "libs/*" -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" roborumble.RoboRumbleAtHome ./roborumble/roborumble.txt
+@echo off
 
-@REM Java 12 and newer
-java -Xmx512M -cp "libs/*" -Djava.security.manager=allow -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" roborumble.RoboRumbleAtHome ./roborumble/roborumble.txt
+@rem ------------------------------------------------------
+@rem RoboRumble
+@rem ------------------------------------------------------
+
+@rem Used for setting _JAVA_OPTIONS
+call set_java_options.bat
+
+@rem Run RoboRumble
+java ^
+  -cp "libs/*" ^
+  -Xmx512M ^
+  -XX:+IgnoreUnrecognizedVMOptions ^
+  "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" ^
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" ^
+  "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED" ^
+  "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" ^
+  roborumble.RoboRumbleAtHome ./roborumble/roborumble.txt
