@@ -1,17 +1,36 @@
 #!/bin/sh
 #
-# Copyright (c) 2001-2021 Mathew A. Nelson and Robocode contributors
+# Copyright (c) 2001-2023 Mathew A. Nelson and Robocode contributors
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # https://robocode.sourceforge.io/license/epl-v10.html
 #
 
-pwd=`pwd`
-cd "${0%/*}"
-# Older than Java 12
-# java -Xmx512M -cp "libs/*" -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" roborumble.RoboRumbleAtHome ./roborumble/teamrumble.txt
+#----------------------------------------------------------
+# TeamRumble
+#----------------------------------------------------------
 
-# Java 12 and newer
-java -Xmx512M -cp "libs/*" -Djava.security.manager=allow -XX:+IgnoreUnrecognizedVMOptions "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.desktop/sun.awt=ALL-UNNAMED" roborumble.RoboRumbleAtHome ./roborumble/teamrumble.txt
-cd "${pwd}"
+# Used for setting Java options
+. ./set_java_options.sh
+
+# Save present work directory (pwd)
+pwd=$(pwd)
+
+# Change directory to the directory where this script is located
+cd "${0%/*}" || exit
+
+# Run TeamRumble
+java \
+  -cp "libs/*" \
+  -Xmx512M \
+  -Xdock:name=TeamRumble \
+  -Xdock:icon=roborumble.ico \
+  -XX:+IgnoreUnrecognizedVMOptions \
+  "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED" \
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" \
+  roborumble.RoboRumbleAtHome \
+  ./roborumble/teamrumble.txt
+
+# Restore present work directory
+cd "${pwd}" || exit
